# SDL_examples

./: CMakeLists.txt  README.md  SDL_game_setup.c  SDL_init.c  SDL_init_video_display.c  SDL_setup_display.c
.cache/clangd/index/: SDL_init.c.782793B12CA9F3DC.idx  SDL_init_video_display.c.71B1FB3F5B784987.idx
